--- a/canvas.html
+++ b/canvas.html
@@ -8,18 +8,7 @@
 	<link href="canvas.css" rel="stylesheet" type="text/css">
  </head>
 
-
-  <body>
-  <div class="container">
-	  <div class="row">
-
-
-  <div class="mx-button">
-	  <input name="mx" id="butRedo" onclick="drawing.redoShape()">
-	  <label id="redoLabel" for="butRedo" unselectable>Redessiner</label>
-  </div>
-
-  <body>
+ <body>
 	<div class="container"> 
 		<div class="row">
 		<form>
@@ -29,13 +18,8 @@
 				</div>
 			<div class="mx-button">
 				<input type="radio" name="mx" id="butLine" checked>
-				<label for="butLine" unselectable>Ligne</label>
-			</div>
-			<div class="mx-button">
-				<input type="radio" name="mx" id="butCircle" checked>
-				<label for="butCircle" unselectable>Cercle</label>
-			</div>
-
+				<label for="butLine" unselectable>Line</label>
+				</div>
 		</form>
 		<input id="spinnerWidth" type="number" min="1" max="50" step="1" value="5" size="4">
 		<input id="colour" type="color">
@@ -67,5 +51,3 @@
    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
-
-
